# emily

./: .gitmodules  CMakeLists.txt  Info.plist  LICENSE  README.md  envvars.md  tech.md
examples/framenest/: framenest.cpp
examples/hello/: hello.cpp
include/: icons.h  toolkit.h
include/widgets/: button.h  frametab.h  frameview.h  input.h  label.h  light.h  menubar.h  select.h  slider.h  switch.h  widgets.h
macinclude/: SDL2
sfml/: CMakeLists.txt  MODIFIED.md
sfml/extlibs/headers/stb_image/: stb_image.h
sfml/include/SFML/: Graphics.hpp
sfml/include/SFML/Graphics/: FloatColor.hpp  Font.hpp  RenderTarget.hpp  Texture.hpp
sfml/include/SFML/Window/: Event.hpp  Window.hpp
sfml/src/SFML/Graphics/: CMakeLists.txt  FloatColor.cpp  Font.cpp  RenderTarget.cpp  Text.cpp  Texture.cpp
sfml/src/SFML/Window/: CMakeLists.txt  GlContext.hpp  Window.cpp  WindowImpl.cpp  WindowImpl.hpp
sfml/src/SFML/Window/OSX/: SFContext.hpp  SFContext.mm  WindowImplCocoa.hpp  WindowImplCocoa.mm
sfml/src/SFML/Window/Unix/: ClipboardImpl.cpp  CursorImpl.cpp  Display.cpp  GlxContext.cpp  GlxContext.hpp  GlxExtensions.cpp  GlxExtensions.hpp  InputImpl.cpp  WindowImplX11.cpp  WindowImplX11.hpp
sfml/src/SFML/Window/Win32/: WglContext.cpp  WglContext.hpp  WglExtensions.cpp  WglExtensions.hpp  WglExtensions.txt  WindowImplWin32.cpp  WindowImplWin32.hpp
src/: bitmap.cpp  cmenu.cpp  display.cpp  font.cpp  frame.cpp  frameDispatch.cpp  funcs.cpp  icon.cpp  log.cpp  nsstub.h  nsstub.m  string.cpp  video.cpp
src/dummy/: dummy.h  funcs.cpp
src/sdl/: funcs.cpp  sdl.h
src/sfml/: funcs.cpp  sfml.h
src/skin/: default.cpp
src/widget/: base.cpp  button.cpp  frameview.cpp  label.cpp  light.cpp  slider.cpp
